# flamo

./: .gitignore  AGENTS.md  LICENSE  README.md  _config.yml  index.md  pyproject.toml
docs/: .buildinfo  conf.py  functional.html  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/processor/: dsp.doctree
docs/_build/doctrees/system/: recursion.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_sources/: functional.rst.txt
docs/_sources/optimize/: dataset.rst.txt  trainer.rst.txt
docs/_sources/processor/: dsp.rst.txt
docs/auxiliary/: eq.html  filterbank.html  minimize.html  reverb.html  scattering.html
docs/optimize/: dataset.html  loss.html  trainer.html  utils.html
docs/processor/: dsp.html  system.html
docs/system/: recursion.html
docs_html/: search.html
docs_html/processor/: dsp.html
examples/: e0_siso.py  e10_probe.py  e1_mimo.py  e1_vn.py  e2_chaining_filters.py  e3_series_class.py  e4_recursion.py  e4_recursion_nn.py  e5_shell.py  e6_anti_aliasing.py  e7_biquad.py  e7_biquad_nn.py  e7_geq.py  e7_peq.py  e7_svf.py  e8_active_acoustics.py  e8_colorless_fdn.py  e8_colorless_sfdn.py  e8_fdn.py  e9_loss_profile.py  e9_nn.py  run_all.py
flamo/: __init__.py  functional.py  utils.py
flamo/auxiliary/: __init__.py  eq.py  filterbank.py  minimize.py  reverb.py  scattering.py  velvet.py
flamo/auxiliary/config/: config.py
flamo/auxiliary/filter/: __init__.py
flamo/examples/: __init__.py  e0_siso.py  e1_mimo.py  e2_chaining_filters.py  e3_series_class.py  e4_recursion.py  e5_shell.py  e6_anti_aliasing.py  e7_biquad.py  e7_geq.py  e7_svf.py  e8_colorless_fdn.py  e8_fdn.py  example_active_acoustics.py  example_biquad.py  example_colorless_fdn.py  example_fdn.py  example_geq.py  example_mimo.py  example_svf.py  s0_SISO.py  s1_MIMO.py  s2_chain_filters.py  s3_series.py  s4_recursion.py  s5_shell.py
flamo/examples/rirs/: s3_r4_o_est.mat
flamo/notebooks/: e7_biquad.ipynb  e8_colorless_fdn.ipynb
flamo/optimize/: __init__.py  dataset.py  loss.py  surface.py  trainer.py  utils.py
flamo/processor/: __init__.py  dsp.py  dvn.py  probe.py  system.py  velvet.py
notebooks/: e7_biquad.ipynb  e8_colorless_fdn.ipynb
notebooks/output/ex_biquad/checkpoints/: model_e1.pt  model_e3.pt  model_e5.pt  model_e7.pt
rirs/: two-stage-RT-values.mat
sphinx/: conf.py  index.rst
sphinx/_build/doctrees/: environment.pickle  functional.doctree  index.doctree
sphinx/_build/html/: .buildinfo  .buildinfo.bak  functional.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
sphinx/auxiliary/: eq.rst  reverb.rst
sphinx/optimize/: dataset.rst  trainer.rst
sphinx/processor/: dsp.rst  system.rst
src/flamo/auxiliary/: minimize.py
src/flamo/examples/: e6_anti_aliasing.py  e7_biquad.py  e7_geq.py  e8_active_acoustics.py
tests/: test_dvn_sparse.py  test_probe.py  test_velvet.py
(+63 files in other folders)
