[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "flamo"
version = "0.0.3"
authors = [
  { name="Gloria Dal Santo", email="gloria.dalsanto@aalto.fi" },
  { name="Gian Marco De Bortoli", email="gian.debortoli@aalto.fi"},
  { name="Sebastian J. Schlecht", email="sebastian.schlecht@fau.de"}
]
description = "An Open-Source Library for Frequency-Domain Differentiable Audio Processing"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["audio", "signal processing", "differentiable programming"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "pysoundfile",
    "tqdm",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/gdalsanto/flamo"
Issues = "https://github.com/gdalsanto/flamo/issues"